2019-08-10  Markus Gans  <guru.mail@muenster.de>
	* Pitch and duration of system speaker can now be changed 
	  on OpenBSD

2019-08-07  Markus Gans  <guru.mail@muenster.de>
	* Fixes the Cygwin build

2019-08-04  Markus Gans  <guru.mail@muenster.de>
	* Reduce the number of interface parameters

2019-07-31  Markus Gans  <guru.mail@muenster.de>
	* Unit test for the move assignment operator and move constructor 
	  in FPoint, FSize and FRect

2019-07-28  Markus Gans  <guru.mail@muenster.de>
	* FreeBSD can now change the frequency and duration 
	  of the pc speaker signal
	* Added a unit test for the FTermFreeBSD class to test 
	  the FreeBSD console

2019-07-21  Markus Gans  <guru.mail@muenster.de>
	* Reduce include entries in the header files

2019-07-14  Markus Gans  <guru.mail@muenster.de>
	* Reduces the use of raw loops 
	* Add a unit test for FTermOpenBSD to test the OpenBSD 
	  and NetBSD console

2019-06-30  Markus Gans  <guru.mail@muenster.de>
	* Expanding the unit test for FTermLinux
	* Update the cp437 unicode map
	* Reducing the special cases for Solaris

2019-06-19  Markus Gans  <guru.mail@muenster.de>
	* Add a unit test for FTermLinux with a Linux console emulation 
	  and a dedicated FSystem test instance

2019-06-12  Markus Gans  <guru.mail@muenster.de>
	* Fixes problem with scroll bar view after first draw

2019-06-02  Markus Gans  <guru.mail@muenster.de>
	* Avoid drawing the scroll bars if the widget is non-visible

2019-05-27  Markus Gans  <guru.mail@muenster.de>
	* Use the Singleton design pattern to get a single object instance 
	  via FTerm

2019-05-26  Marek Habersack <grendel@twistedcode.net>
	* Fix a segfault when processing input to empty FListView

2019-05-17  Markus Gans  <guru.mail@muenster.de>
	* Move system calls to the new class FSystem

2019-04-27  Markus Gans  <guru.mail@muenster.de>
	* Add the reserve() method to FListBox to increase the capacity 
	  of the list
	* Use shrink_to_fit() to save memory space
