@@ -816,7 +816,11 @@ void FListBox::draw()
     setReverse(true);
 
   if ( isNewFont() )
-    drawBorder (1, 1, int(getWidth()) - 1, int(getHeight()));
+  {
+    FRect box(FPoint(1, 1), getSize());
+    box.scaleBy(-1, 0);
+    finalcut::drawBorder (this, box);
+  }
   else
     drawBorder();
 
@@ -836,16 +840,7 @@ void FListBox::draw()
   if ( isMonochron() )
     setReverse(false);
 
-  if ( ! hbar->isShown() && isHorizontallyScrollable() )
-    hbar->show();
-  else
-    vbar->redraw();
-
-  if ( ! vbar->isShown() && isVerticallyScrollable() )
-    vbar->show();
-  else
-    hbar->redraw();
-
+  drawScrollbars();
   drawList();
 
   if ( flags.focus && getStatusBar() )
@@ -860,6 +855,21 @@ void FListBox::draw()
     }
   }
 }
+
+//----------------------------------------------------------------------
+void FListBox::drawScrollbars()
+{
+  if ( ! hbar->isShown() && isHorizontallyScrollable() )
+    hbar->show();
+  else
+    vbar->redraw();
+
+  if ( ! vbar->isShown() && isVerticallyScrollable() )
+    vbar->show();
+  else
+    hbar->redraw();
+}
+
 
 //----------------------------------------------------------------------
 void FListBox::drawHeadline()
