@@ -247,36 +247,32 @@ bool FWindow::isWindowHidden() const
 //----------------------------------------------------------------------
 void FWindow::drawBorder()
 {
-  if ( isNewFont() )
+  if ( isNewFont() )  // Draw a newfont outer frame
   {
-    int x1 = 1
-      , x2 = 1 + int(getWidth()) - 1
-      , y1 = 1
-      , y2 = 1 + int(getHeight()) - 1;
-
-    print() << FPoint(x1, y1) << fc::NF_border_corner_upper_left;  // ⎡
-
-    for (int x = x1 + 1; x < x2; x++)
-      print (fc::NF_border_line_upper);  // ¯
+    FRect r(FPoint(1, 1), getSize());
+    print() << r.getUpperLeftPos()
+            << fc::NF_border_corner_upper_left;    // ⎡
+    for (int x = r.getX1() + 1; x < r.getX2(); x++)
+      print (fc::NF_border_line_upper);            // ¯
 
     print (fc::NF_rev_border_corner_upper_right);  // ⎤
 
-    for (int y = y1 + 1; y < y2; y++)
+    for (int y = r.getY1() + 1; y < r.getY2(); y++)
     {
-      print() << FPoint(x1, y)  // border left ⎸
-              << fc::NF_border_line_left
-              << FPoint(x2, y)  // border right⎹
-              << fc::NF_rev_border_line_right;
+      print() << FPoint(r.getX1(), y)
+              << fc::NF_border_line_left        // border left ⎸
+              << FPoint(r.getX2(), y)
+              << fc::NF_rev_border_line_right;  // border right⎹
     }
 
-    print() << FPoint(x1, y2)  // lower left corner border ⎣
+    print() << r.getLowerLeftPos()  // lower left corner border ⎣
             << fc::NF_border_corner_lower_left;
 
-    for (std::size_t x = 2; x < getWidth(); x++)  // low line _
-      print (fc::NF_border_line_bottom);
+    for (int x = r.getX1() + 1; x < r.getX2(); x++)
+      print (fc::NF_border_line_bottom);  // low line _
 
-    print() << FPoint(x2, y2)  // lower right corner border ⎦
-            << fc::NF_rev_border_corner_lower_right;
+    // lower right corner border ⎦
+    print (fc::NF_rev_border_corner_lower_right);
   }
   else
   {
