@@ -1,3 +1,7 @@
+2019-08-11  Markus Gans  <guru.mail@muenster.de>
+	* FRect has now got a scaleBy() method
+	* Convert drawBorder() to a non-member function using FRect
+
 2019-08-10  Markus Gans  <guru.mail@muenster.de>
 	* Pitch and duration of system speaker can now be changed 
 	  on OpenBSD
